force-app/main/default/objects/Suspension__c/fields/Adoption_Case__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adoption Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Suspensions</relationshipLabel>
    <relationshipName>Suspensions</relationshipName>
    <type>Lookup</type>
</CustomField>