force-app/main/default/objects/Suspension__c/fields/Adoption_Suspension_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Suspension_Approval_Status__c</fullName>
    <label>Adoption Suspension Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>