force-app/main/default/objects/Suspension__c/fields/Adoption_Suspension_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Suspension_Approved_By__c</fullName>
    <label>Adoption Suspension Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>