force-app/main/default/objects/Suspension__c/fields/Casevault_PID__c.field-meta.xml
<CustomField>
    <fullName>Casevault_PID__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casevault PID#:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>