force-app/main/default/objects/Suspension__c/fields/D_O_B__c.field-meta.xml
<CustomField>
    <fullName>D_O_B__c</fullName>
    <formula>DATE(2015, 03, 17)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D.O.B</label>
    <type>Date</type>
</CustomField>